// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Error rate when data is loaded returns the transaction error rate has the correct error rate 1`] = `
Array [
  Object {
    "x": 1627973400000,
    "y": 0,
  },
  Object {
    "x": 1627973460000,
    "y": 0,
  },
  Object {
    "x": 1627973520000,
    "y": 0.333333333333333,
  },
  Object {
    "x": 1627973580000,
    "y": 0.181818181818182,
  },
  Object {
    "x": 1627973640000,
    "y": 0,
  },
  Object {
    "x": 1627973700000,
    "y": 0,
  },
  Object {
    "x": 1627973760000,
    "y": 0.166666666666667,
  },
  Object {
    "x": 1627973820000,
    "y": 0.181818181818182,
  },
  Object {
    "x": 1627973880000,
    "y": 0,
  },
  Object {
    "x": 1627973940000,
    "y": 0,
  },
  Object {
    "x": 1627974000000,
    "y": 0.0833333333333333,
  },
  Object {
    "x": 1627974060000,
    "y": 0.0769230769230769,
  },
  Object {
    "x": 1627974120000,
    "y": 0,
  },
  Object {
    "x": 1627974180000,
    "y": 0.1,
  },
  Object {
    "x": 1627974240000,
    "y": 0.153846153846154,
  },
  Object {
    "x": 1627974300000,
    "y": 0,
  },
  Object {
    "x": 1627974360000,
    "y": null,
  },
  Object {
    "x": 1627974420000,
    "y": 0,
  },
  Object {
    "x": 1627974480000,
    "y": 0,
  },
  Object {
    "x": 1627974540000,
    "y": 0,
  },
  Object {
    "x": 1627974600000,
    "y": 0.125,
  },
  Object {
    "x": 1627974660000,
    "y": 0.6,
  },
  Object {
    "x": 1627974720000,
    "y": 0.2,
  },
  Object {
    "x": 1627974780000,
    "y": 0,
  },
  Object {
    "x": 1627974840000,
    "y": 0,
  },
  Object {
    "x": 1627974900000,
    "y": 0.0666666666666667,
  },
  Object {
    "x": 1627974960000,
    "y": 0,
  },
  Object {
    "x": 1627975020000,
    "y": 0,
  },
  Object {
    "x": 1627975080000,
    "y": 0,
  },
  Object {
    "x": 1627975140000,
    "y": 0.181818181818182,
  },
  Object {
    "x": 1627975200000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Error rate when data is loaded returns the transaction error rate with comparison data has the correct error rate 1`] = `
Array [
  Object {
    "x": 1627974300000,
    "y": 0,
  },
  Object {
    "x": 1627974360000,
    "y": null,
  },
  Object {
    "x": 1627974420000,
    "y": 0,
  },
  Object {
    "x": 1627974480000,
    "y": 0,
  },
  Object {
    "x": 1627974540000,
    "y": 0,
  },
  Object {
    "x": 1627974600000,
    "y": 0.125,
  },
  Object {
    "x": 1627974660000,
    "y": 0.6,
  },
  Object {
    "x": 1627974720000,
    "y": 0.2,
  },
  Object {
    "x": 1627974780000,
    "y": 0,
  },
  Object {
    "x": 1627974840000,
    "y": 0,
  },
  Object {
    "x": 1627974900000,
    "y": 0.0666666666666667,
  },
  Object {
    "x": 1627974960000,
    "y": 0,
  },
  Object {
    "x": 1627975020000,
    "y": 0,
  },
  Object {
    "x": 1627975080000,
    "y": 0,
  },
  Object {
    "x": 1627975140000,
    "y": 0.181818181818182,
  },
  Object {
    "x": 1627975200000,
    "y": null,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Error rate when data is loaded returns the transaction error rate with comparison data has the correct error rate 2`] = `
Array [
  Object {
    "x": 1627974300000,
    "y": 0,
  },
  Object {
    "x": 1627974360000,
    "y": 0,
  },
  Object {
    "x": 1627974420000,
    "y": 0.333333333333333,
  },
  Object {
    "x": 1627974480000,
    "y": 0.181818181818182,
  },
  Object {
    "x": 1627974540000,
    "y": 0,
  },
  Object {
    "x": 1627974600000,
    "y": 0,
  },
  Object {
    "x": 1627974660000,
    "y": 0.166666666666667,
  },
  Object {
    "x": 1627974720000,
    "y": 0.181818181818182,
  },
  Object {
    "x": 1627974780000,
    "y": 0,
  },
  Object {
    "x": 1627974840000,
    "y": 0,
  },
  Object {
    "x": 1627974900000,
    "y": 0.0833333333333333,
  },
  Object {
    "x": 1627974960000,
    "y": 0.0769230769230769,
  },
  Object {
    "x": 1627975020000,
    "y": 0,
  },
  Object {
    "x": 1627975080000,
    "y": 0.1,
  },
  Object {
    "x": 1627975140000,
    "y": 0.153846153846154,
  },
  Object {
    "x": 1627975200000,
    "y": null,
  },
]
`;
